--- a/ansible-molecule/roles/simple_ansible_role/tasks/main.yml
+++ b/ansible-molecule/roles/simple_ansible_role/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
 
-- name: Copy a file with hello world in it to /tmp
+- name: Copy a file with some cool dialogue in it to /tmp
   copy:
     src: witcher_lines.txt
     dest: /tmp
